# SmartFill

./: .gitignore  CMakeLists.txt  LICENSING.md  NDK_NOTES.md  PLAN.md  README.md  THIRD_PARTY_LICENSES.md  deploy.ps1  menu.py  package.ps1
cmake/: find_onnxruntime.cmake  find_sdcpp.cmake  install_user_menu.cmake  patch_sdcpp.cmake
core/: CMakeLists.txt
core/include/: ai_cache.h  ai_hash.h  ai_worker.h  image_cache.h  lama_session.h  lama_tiler.h  plugin_path.h  sd_session.h
core/src/: ai_cache.cpp  ai_hash.cpp  ai_worker.cpp  image_cache.cpp  lama_session.cpp  lama_tiler.cpp  plugin_path.cpp  sd_session.cpp
files/: .gitignore  LICENSE
ops/AIGenerate/: AIGenerate.cpp  CMakeLists.txt
ops/AISmartFill/: AISmartFill.cpp  CMakeLists.txt  dll_bootstrap.cpp
scripts/: menu.py  nuke_ai_fill_presets.py  package_dist.ps1
tools/: convert_sdxl_controlnet.py
